Fix cards stretching

--- a/style.css
+++ b/style.css
@@ -187,15 +187,15 @@ body {
 }
 
 .card {
-  display: inline-block;
-  position: relative;
   width: 175px;
-  height: 525px;
   background-color: #f4f4f5;
   border-radius: 10px;
   border: 2px solid #f4f4f5;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05);
   transition: transform 0.2s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card:hover {
